@@ -241,8 +241,8 @@ public class PersistentHashedIndex implements Index {
             String line;
             while ((line = br.readLine()) != null) {
                 String[] data = line.split(";");
-                docNames.put(new Integer(data[0]), data[1]);
-                docLengths.put(new Integer(data[0]), new Integer(data[2]));
+                docNames.put(Integer.valueOf(data[0]), data[1]);
+                docLengths.put(Integer.valueOf(data[0]), Integer.valueOf(data[2]));
             }
         }
         freader.close();
@@ -392,15 +392,12 @@ public class PersistentHashedIndex implements Index {
      * Inserts this token in the main-memory hashtable.
      */
     public void insert(String token, int docID, int offset) {
-        //
-        //  YOUR CODE HERE
-        //
         if (!index.containsKey(token)) {
             //if token didn't exit, insert new one
             index.put(token, new PostingsList());
 
         }
-        index.get(token).addPersistentElements(docID, offset);
+        index.get(token).addPersistentElements(docID, offset, 0.0);
     }
 
 
